@@ -1,6 +1,6 @@
 package com.hscoderadar.domain.news.service;
 
-import com.hscoderadar.domain.news.dto.NewsDto;
+import com.hscoderadar.domain.news.dto.response.NewsResponse;
 import com.hscoderadar.domain.tradenews.entity.TradeNewsCache;
 import com.hscoderadar.domain.tradenews.repository.TradeNewsCacheRepository;
 import lombok.RequiredArgsConstructor;
@@ -9,22 +9,19 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class NewsService {
+  private final TradeNewsCacheRepository tradeNewsCacheRepository;
 
-    private final TradeNewsCacheRepository tradeNewsCacheRepository;
+  public List<NewsResponse> getLatestNews() {
+    List<TradeNewsCache> newsList = tradeNewsCacheRepository.findByIsActiveTrueAndExpiresAtAfterOrderByPublishedAtDesc(
+        LocalDateTime.now());
 
-    public List<NewsDto> getLatestNews() {
-        
-        List<TradeNewsCache> newsList = tradeNewsCacheRepository.findByIsActiveTrueAndExpiresAtAfterOrderByPublishedAtDesc(LocalDateTime.now());
-        
-        return newsList.stream()
-                .map(NewsDto::from)
-                .collect(Collectors.toList());
-    }
-
+    return newsList.stream()
+        .map(NewsResponse::from)
+        .toList();
+  }
 }
